# Prust-Test

./: .gitignore  Cargo.toml  README.md  out.txt  readme.md
src/: list_ports.rs  main.rs  utils.rs
