[package]
name = "prust_test"
version = "0.1.0"
authors = ["syelman <selman.ozleyen2017@gtu.edu.tr>"]
edition = "2018"
default-run="prust_test"



[lib]
name = "utils"
path = "src/utils.rs"



[[bin]]
name = "list_ports"
path = "src/list_ports.rs"

[target.'cfg(unix)'.dependencies]
libudev = "0.2.0"



[dependencies]
hashbrown = "0.8.2"
serialport = {version = "3.3.0"}
prust_core = {git = "https://github.com/visionspacetec/Prust-Core",package = "prust_core"}
clap = "2.33.3"
byteorder = {version = "1.3.4",default-features = false}
rustyline = "6.3.0"
text_io = "0.1.8"
